[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/interface/menu/menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/interface/menu_options/MenuOptions.gd" type="Script" id=2]

[node name="MenuOptions" instance=ExtResource( 1 )]
script = ExtResource( 2 )
available_resolutions = [ "1920x1080", "640x320" ]

[node name="ColorRect" parent="." index="0"]
margin_left = 56.0

[node name="LabelTitle" parent="ColorRect" index="0"]
text = "Options"

[node name="VBoxContainer" parent="ColorRect" index="1"]
margin_left = -115.0
margin_right = 114.0

[node name="Resolution" type="HBoxContainer" parent="ColorRect/VBoxContainer" index="0"]
margin_top = 32.0
margin_right = 229.0
margin_bottom = 51.0
alignment = 1

[node name="LabelResolution" type="Label" parent="ColorRect/VBoxContainer/Resolution" index="0"]
margin_left = 31.0
margin_top = 3.0
margin_right = 101.0
margin_bottom = 16.0
text = "Resolution"

[node name="OptionButtonResolution" type="OptionButton" parent="ColorRect/VBoxContainer/Resolution" index="1"]
margin_left = 105.0
margin_right = 197.0
margin_bottom = 19.0
rect_min_size = Vector2( 92, 19 )
focus_mode = 0
enabled_focus_mode = 0
text = "1920x1080"

[node name="FullScreen" type="HBoxContainer" parent="ColorRect/VBoxContainer" index="1"]
margin_top = 55.0
margin_right = 229.0
margin_bottom = 79.0
alignment = 1

[node name="LabelFullscreen" type="Label" parent="ColorRect/VBoxContainer/FullScreen" index="0"]
margin_left = 65.0
margin_top = 5.0
margin_right = 135.0
margin_bottom = 18.0
text = "FullScreen"

[node name="CheckBox" type="CheckBox" parent="ColorRect/VBoxContainer/FullScreen" index="1"]
margin_left = 139.0
margin_right = 163.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Bordless" type="HBoxContainer" parent="ColorRect/VBoxContainer" index="2"]
margin_top = 83.0
margin_right = 229.0
margin_bottom = 107.0
alignment = 1

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/Bordless" index="0"]
margin_left = 72.0
margin_top = 5.0
margin_right = 128.0
margin_bottom = 18.0
text = "Bordless"

[node name="CheckBoxBordless" type="CheckBox" parent="ColorRect/VBoxContainer/Bordless" index="1"]
margin_left = 132.0
margin_right = 156.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0

[connection signal="item_selected" from="ColorRect/VBoxContainer/Resolution/OptionButtonResolution" to="." method="_on_OptionButtonResolution_item_selected"]
[connection signal="toggled" from="ColorRect/VBoxContainer/FullScreen/CheckBox" to="." method="_on_CheckBox_toggled"]
